# burn-extended

./: .gitignore  Cargo.toml  README.md
docs/: README.md  ace-step.md  gpt-oss-architecture.md  gpt-oss.md  handoff_plan.md  matrix-game-2.md
examples/: ace_step.rs  decoder_demo.rs  diffusion_demo.rs  gpt_oss.rs  gpt_oss_harmony_infer.rs  gpt_oss_infer.rs  load_apply.rs  load_qkv.rs  matrix_game2_wgpu.rs  matrix_game2_winit.rs  matrix_game_2.rs  streaming_mqa_demo.rs  wgpu_backend_init.rs
scripts/: parity_test.sh
src/: lib.rs
src/activation/: mod.rs
src/attention/: alibi.rs  baseline.rs  cache_ops.rs  core.rs  cross.rs  linear.rs  mask1d.rs  mod.rs  mqa.rs  streaming.rs  streaming_ext.rs  streaming_mqa.rs
src/bias/: mod.rs
src/cache/: mod.rs
src/decoder/: mod.rs
src/diffusion/: euler.rs  guidance.rs  heun.rs  mod.rs  pingpong.rs  pipeline.rs  scheduler.rs  utils.rs
src/generate/: mod.rs  runner.rs
src/image/: mod.rs  patch2d.rs
src/loader/: common.rs  gpt_oss.rs  mod.rs  modelbin.rs  mxfp4.rs  qkv.rs  simple.rs
src/models/: gpt_oss.rs  gpt_oss_config.rs  mod.rs
src/moe/: mod.rs
src/quant/: gpu.rs  mod.rs
src/rope/: mod.rs  rope3d.rs
src/sampling/: mod.rs
src/video/: mod.rs  patch3d.rs
tests/: attention_cache_tests.rs  attention_core_tests.rs  attention_cross_cache_tests.rs  attention_ext_tests.rs  attention_linear_tests.rs  attention_mqa_streaming_tests.rs  attention_tests.rs  cache_manager_tests.rs  decoder_bias_tests.rs  decoder_invariants_tests.rs  decoder_tests.rs  diffusion_pipeline_tests.rs  diffusion_tests.rs  exporter_parity_tests.rs  gpt_oss_inference_tests.rs  inference_parity_fixture.rs  modelbin_verify_tests.rs  moe_basic_tests.rs  mxfp4_dequant_tests.rs  params_ergonomics_tests.rs
