[package]
name = "burn-extended"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extended attention modules and utilities for Burn (MQA/GQA, sinks bias, RoPE NTK/YaRN), extracted as a separate crate for modular reuse."
repository = "https://github.com/tracel-ai/burn"
documentation = "https://docs.rs/burn-extended"
publish = false

[dependencies]
burn        = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn",        default-features = false, features = ["wgpu"] }
burn-core   = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn-core",   default-features = false }
burn-ndarray = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn-ndarray", default-features = false, features = ["std"] }
burn-store  = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn-store",  default-features = false }
burn-tensor = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn-tensor", default-features = false }
burn-wgpu   = { git = "https://github.com/antimora/burn", rev = "7235cf2f5cd501d2abc578865a592e6fb59d1772", package = "burn-wgpu",   default-features = false }
clap = { version = "4.5.47", features = ["derive"], default-features = true }
hashbrown = "0.15.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rand = "0.9.2"
safetensors = { version = "0.6.2", default-features = true }
serde = { version = "1.0.225", features = ["derive"] }
winit = "0.30.12"
wgpu = "26.0.1"

[features]
default = ["std"]
std = ["burn-core/std"]
