[package]
name = "burn-extended"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extended attention modules and utilities for Burn (MQA/GQA, sinks bias, RoPE NTK/YaRN), extracted as a separate crate for modular reuse."
repository = "https://github.com/tracel-ai/burn"
documentation = "https://docs.rs/burn-extended"
publish = false

[dependencies]
burn        = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn",        default-features = false, features = ["wgpu"] }
burn-core   = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn-core",   default-features = false }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn-ndarray", default-features = false, features = ["std"] }
burn-store  = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn-store",  default-features = false }
burn-tensor = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn-tensor", default-features = false }
burn-wgpu   = { git = "https://github.com/tracel-ai/burn", rev = "24a516878f15615cf5d6c34894a6459e186cf4e4", package = "burn-wgpu",   default-features = false }
clap = { version = "4.5.47", features = ["derive"], default-features = true }
hashbrown = "0.15.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rand = "0.9.2"
safetensors = { version = "0.6.2", default-features = true }
serde = { version = "1.0.225", features = ["derive"] }
winit = "0.30.12"
wgpu = "26.0.1"
serde_json = "1"
anyhow = "1"
openai_harmony = { package = "openai-harmony", path = "../harmony" }
uuid = { version = "1", features = ["std", "fast-rng"] }
half = { version = "2", features = ["std"] }
memmap2 = "0.9"
libc = "0.2"

[features]
default = ["std"]
std = ["burn-core/std"]
moe_debug = []
