[package]
name = "burn-extended"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extended attention modules and utilities for Burn (MQA/GQA, sinks bias, RoPE NTK/YaRN), extracted as a separate crate for modular reuse."
repository = "https://github.com/tracel-ai/burn"
documentation = "https://docs.rs/burn-extended"
publish = false

[dependencies]
burn        = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn",        default-features = false, features = ["wgpu"] }
burn-core   = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-core",   default-features = false }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-ndarray", default-features = false, features = ["std"] }
burn-store  = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-store",  default-features = false }
burn-tensor = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-tensor", default-features = false }
burn-wgpu   = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-wgpu",   default-features = false, features = ["template"] }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", rev = "0c13f844dc530e36dddff4626f9644746dbe53c6", package = "burn-cubecl", default-features = false }
cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
cubecl-common = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
cubecl-quant = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
clap = { version = "4.5.47", features = ["derive"], default-features = true }
hashbrown = "0.15.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rand = "0.9.2"
safetensors = { version = "0.6.2", default-features = true }
serde = { version = "1.0.225", features = ["derive"] }
winit = "0.30.12"
wgpu = "26.0.1"
serde_json = "1"
anyhow = "1"
openai_harmony = { package = "openai-harmony", path = "../harmony" }
uuid = { version = "1", features = ["std", "fast-rng"] }
half = { version = "2", features = ["std"] }
memmap2 = "0.9"
libc = "0.2"
bytemuck = { version = "1", default-features = true }

[features]
default = ["std", "wgpu"]
std = ["burn-core/std"]
wgpu = []
